--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
             - echo "Post build phase"
 artifacts:
     files:
-        - '**/*'        
+        - index.html      
     discard-paths: yes
 
             
